--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
       iste minima.
     </p> -->
     <!-- <h3 id="imie"></h3> -->
+    <h1>Kim jesteś? Wpisz poniżej</h1>
     <input type="text" id="input_imie" />
-    <button onclick="pobierz_dane()">Pobierz imie</button>
-    <h3 id="imie">Cześć</h3>
+    <button onclick="pobierz_dane()">Zatwierdź</button>
+    <h1 id="imie">Cześć</h1>
     <div id="divek"></div>
     <script>
       pobierz_dane = () => {
@@ -27,6 +28,7 @@
         console.log(imie_html);
         imie_html.innerText += " " + imie;
       };
+
 
       //   let a = 3;
       //   console.log(a);
@@ -60,5 +62,45 @@
       //     imie.innerText = imie_uzytkownika + " jestem z inner texta";
       //   };
     </script>
-  </body>
+          <h1 style="color:green"> Czy chcesz kawkę? </h1>
+          
+  </br> </br>
+          <a href="adres"><img src="C:\Users\Microsoft\Desktop\IMG.jpg" width="309" height="179"></a>
+
+</br></br>
+
+
+<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+<script>
+$(document).ready(function(){
+    $('#button').click(function(){
+        $('#hide').css('display', 'inline-block');
+    });
+});
+var iceCream = 'chocolate';
+if (iceCream === 'chocolate') {
+  alert('Yay, I love chocolate ice cream!');
+} else {
+  alert('Awwww, but chocolate is my favorite...');
+}
+</script>
+<style type='text/css'>
+#hide {
+    width: 100px;
+    height: 100px;
+    display: none;
+    position: relative;
+    text font-size:xx-large;
+}
+</style>
+<input type='button' id='button' value='POPROSZĘ' STYLE="font: 15pt Arial; font-style: italic; font-weight: bold; color:black; background:green; width:309px; height:79px;">
+</br></br>
+<div id='hide'>
+
+  <span style="font-size:xx-large"> JUŻ ROBIĘ </span>  
+</div>
+</br>
+<a href="https://jbzd.com.pl/"><input type="submit" value="NIEE" STYLE="font: 15pt Arial; font-style: italic; font-weight: bold; color:black; background:red; width:309px; height:79px;"></a>
+
+ </body>
 </html>
