--- a/index1.html
+++ b/index1.html
@@ -58,12 +58,17 @@
         <li><a href="link">Przycisk 4</a></li>
         <li><a href="link">Przycisk 3</a></li>
         <li><a href="link">Przycisk 4</a></li>
+        <li class="searchbar"> <img src="images/search.png" id="search"></li>
 
     </nav>
-  </menu>
 
+  </menu>
+  <div class="search" id="searchinput">
+    <input class="wyszukiwarka" type="text" name="" id="" placeholder="|search">
+    <img src="images/search.png">
+  </div>
   <main>
-    <div id="carouselExampleControls" class="carousel slide m-0 p-0" data-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide set_top" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="d-block w-100" src="images/slider1.png" alt="First slide">
@@ -99,5 +104,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+
+    <script src="script.js"> </script>
 </body>
 </head>
