--- a/index1.html
+++ b/index1.html
@@ -52,12 +52,12 @@
   <menu>
     <nav>
       <ul>
-        <li><a href="link">Przycisk 1</a></li>
-        <li><a href="link">Przycisk 2</a></li>
-        <li><a href="link">Przycisk 3</a></li>
-        <li><a href="link">Przycisk 4</a></li>
-        <li><a href="link">Przycisk 3</a></li>
-        <li><a href="link">Przycisk 4</a></li>
+        <li><a href="link">HOME</a></li>
+        <li><a href="link">OUR SOLUTIONS</a></li>
+        <li><a href="link">CASE STUDIES</a></li>
+        <li><a href="link">ABOUT</a></li>
+        <li><a href="link">NEWS</a></li>
+        <li><a href="link">CONTACT</a></li>
         <li class="searchbar"> <img src="images/search.png" id="search"></li>
 
     </nav>
