--- a/index1.html
+++ b/index1.html
@@ -70,8 +70,9 @@
   <main>
     <div id="carouselExampleControls" class="carousel slide set_top" data-ride="carousel">
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="images/slider1.png" alt="First slide">
+        <div class="carousel-item active ">
+          <img class="d-block w-100 foto_slider" src="images/slider1.png" alt="First slide">
+          <h1 class=" slider_content">Slider 1</h1>
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" src="images/slider2.png" alt="Second slide">
@@ -89,7 +90,21 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-
+    <h2 class="naglowek"> HOW CAN WE HELP YOU</h2>
+    <div class="footer_row">
+      <div class="footer_item">
+         <img src="images/sprcifier.png" alt="builder">
+         <h3 class="h3_spec">IM A SPECIFER</h3>
+        </div>
+        <div class="footer_item">
+          <img src="images/builder.png" alt="manufacturer">
+          <h3 class="h3_build">IM A BUILDER</h3>
+         </div>
+         <div class="footer_item">
+          <img src="images/manufacturer.png" alt="specifer">
+          <h3 class="h3_precast">IM A PRECAST</h3>
+         </div>
+    </div>
   </main>
 
   <footer>
@@ -105,6 +120,8 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 
-    <script src="script.js"> </script>
+  <script src="script.js"> </script>
+
+
 </body>
 </head>
