--- a/index1.html
+++ b/index1.html
@@ -71,8 +71,9 @@
     <div id="carouselExampleControls" class="carousel slide set_top" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active ">
-          <img class="d-block w-100 foto_slider" src="images/slider1.png" alt="First slide">
-          <h1 class=" slider_content">Slider 1</h1>
+        <div class="slider1"> 
+          <h1>slider 1</h1>
+        </div>
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" src="images/slider2.png" alt="Second slide">
