--- a/index1.html
+++ b/index1.html
@@ -72,17 +72,31 @@
       <div class="carousel-inner">
         <div class="carousel-item active ">
           <div class="slider1">
-            <h1>slider 1</h1>
+            <h3 class="slider_h3">DUNLAVIN CHURCH RESTORATION</h3>
+            <div class="slider_text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, at quisquam. Ad
+              quis sunt laboriosam fuga exercitationem repellendus tempore qui quam eaque cupiditate. Recusandae,
+              aliquid aperiam fugiat minus odit inventore?</div>
+              <button class="slider_button"> find out more</button>
           </div>
         </div>
         <div class="carousel-item">
           <div class="slider2">
-            <h1>slider 2</h1>
+            <h3 class= "slider_h3">DUNLAVIN CHURCH RESTORATION</h3>
+            <div class="slider_text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, at quisquam. Ad
+              quis sunt laboriosam fuga exercitationem repellendus tempore qui quam eaque cupiditate. Recusandae,
+              aliquid aperiam fugiat minus odit inventore?</div>
+              <button class="slider_button"> find out more</button>
+          </div>
           </div>
         </div>
         <div class="carousel-item">
           <div class="slider2">
-            <h1>slider 2</h1>
+            <h3 class="slider_h3">DUNLAVIN CHURCH RESTORATION</h3>
+            <div class="slider_text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, at quisquam. Ad
+              quis sunt laboriosam fuga exercitationem repellendus tempore qui quam eaque cupiditate. Recusandae,
+              aliquid aperiam fugiat minus odit inventore?</div>
+              <button class="slider_button"> find out more</button>
+          </div>
           </div>
         </div>
       </div>
