--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -22,29 +22,29 @@
   <header>
     <div class="header-content">
       <div class="menu-item">
-        <img src="images/dropl.png">
+        <img src="../images_content/dropl.png">
       </div>
       <div class="menu-item">
-        <div> <img src="images/call.png"> </div>
+        <div> <img src="../images_content/call.png"> </div>
         <div class="menu-item-right">
           <h3> CALL </h3>
-          <a href="tel:+48 882 515 514"> +48 882 515 514 </a>
+          <a class="menu_a" href="tel:+48 882 515 514"> +48 882 515 514 </a>
         </div>
       </div>
 
       <div class="menu-item">
-        <div> <img src="images/mail.png"> </div>
+        <div> <img src="../images_content/mail.png"> </div>
         <div class="menu-item-right">
           <h3> EMAIL </h3>
-          <a href="mailto:info@droptica.com"> info@droptica.com </a>
+          <a class="menu_a" href="mailto:info@droptica.com"> info@droptica.com </a>
 
         </div>
       </div>
       <div class="menu-item linkedin">
-        <img src="images/linkedin.png">
+        <img src="../images_content/linkedin.png">
       </div>
       <div class="menu-item twitter">
-        <img src="images/twitter.png">
+        <img src="../images_content/twitter.png">
       </div>
     </div>
 
@@ -58,14 +58,14 @@
         <li><a href="link">ABOUT</a></li>
         <li><a href="link">NEWS</a></li>
         <li><a href="link">CONTACT</a></li>
-        <li class="searchbar"> <img src="images/search.png" id="search"></li>
+        <li class="searchbar"> <img src="../images_content/search.png" id="search"></li>
 
     </nav>
 
   </menu>
   <div class="search" id="searchinput">
     <input class="wyszukiwarka" type="text" name="" id="" placeholder="|search">
-    <img src="images/search.png">
+    <img src="../images_content/search.png">
   </div>
   <main>
     <div id="carouselExampleControls" class="carousel slide set_top" data-ride="carousel">
@@ -76,17 +76,7 @@
             <div class="slider_text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, at quisquam. Ad
               quis sunt laboriosam fuga exercitationem repellendus tempore qui quam eaque cupiditate. Recusandae,
               aliquid aperiam fugiat minus odit inventore?</div>
-              <button class="slider_button"> find out more</button>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="slider2">
-            <h3 class= "slider_h3">DUNLAVIN CHURCH RESTORATION</h3>
-            <div class="slider_text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, at quisquam. Ad
-              quis sunt laboriosam fuga exercitationem repellendus tempore qui quam eaque cupiditate. Recusandae,
-              aliquid aperiam fugiat minus odit inventore?</div>
-              <button class="slider_button"> find out more</button>
-          </div>
+            <button class="slider_button"> find out more</button>
           </div>
         </div>
         <div class="carousel-item">
@@ -95,32 +85,42 @@
             <div class="slider_text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, at quisquam. Ad
               quis sunt laboriosam fuga exercitationem repellendus tempore qui quam eaque cupiditate. Recusandae,
               aliquid aperiam fugiat minus odit inventore?</div>
-              <button class="slider_button"> find out more</button>
-          </div>
+            <button class="slider_button"> find out more</button>
           </div>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+      <div class="carousel-item">
+        <div class="slider2">
+          <h3 class="slider_h3">DUNLAVIN CHURCH RESTORATION</h3>
+          <div class="slider_text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, at quisquam. Ad
+            quis sunt laboriosam fuga exercitationem repellendus tempore qui quam eaque cupiditate. Recusandae,
+            aliquid aperiam fugiat minus odit inventore?</div>
+          <button class="slider_button"> find out more</button>
+        </div>
+      </div>
+    </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
     </div>
     <h2 class="naglowek"> HOW CAN WE HELP YOU</h2>
     <div class="footer_row">
       <div class="footer_item">
-        <img src="images/sprcifier.png" alt="builder">
+        <img src="../images_content/sprcifier.png" alt="builder">
         <h3 class="h3_spec">IM A SPECIFER</h3>
       </div>
       <div class="footer_item">
-        <img src="images/builder.png" alt="manufacturer">
+        <img src="../images_content/builder.png" alt="manufacturer">
         <h3 class="h3_build">IM A BUILDER</h3>
       </div>
       <div class="footer_item">
-        <img src="images/manufacturer.png" alt="specifer">
+        <img src="../images_content/manufacturer.png" alt="specifer">
         <h3 class="h3_precast">IM A PRECAST</h3>
       </div>
     </div>
@@ -139,7 +139,7 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 
-  <script src="script.js"> </script>
+  <script src="./js/script.js"> </script>
 
 
 </body>
